Polishing.
See #3134